--- a/src/app/feature/institution/institution.component.html
+++ b/src/app/feature/institution/institution.component.html
@@ -45,7 +45,7 @@
               class="dialog-button"
               (click)="onReset()"
             >
-              Reset
+              nama saya Juan Prasetya Aditama dan s
             </button> -->
               <button
                 mat-raised-button
@@ -85,9 +85,9 @@
       >
         <ng-template pTemplate="caption">
           <div class="header-table">
-          <b>  <span style="font-size: 0.8rem; padding-left: 1rem">
+            <span style="font-size: 0.8rem; padding-left: 1rem">
               Institution</span
-            ></b>
+            >
 
             <div class="table-func-container-2">
               <ng-template
