--- a/src/app/feature/ext-int-iso8583/ext-int-iso8583.component.html
+++ b/src/app/feature/ext-int-iso8583/ext-int-iso8583.component.html
@@ -130,7 +130,7 @@
         </ng-template>
         <ng-template pTemplate="emptymessage">
           <tr style="">
-            <td colspan="6">There is no configuration.</td>
+            <td colspan="6">There is no Terminal.</td>
           </tr>
         </ng-template>
       </p-table>
