--- a/src/app/feature/user-group/user-group.component.html
+++ b/src/app/feature/user-group/user-group.component.html
@@ -109,7 +109,7 @@
         <ng-template pTemplate="header">
           <tr>
             <th pResizableColumn>Id</th>
-            <th pResizableColumn>Name</th>
+            <th pResizableColumn>Group</th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-product let-i="rowIndex">
