--- a/src/app/feature/user/component/user-dialog/user-dialog.component.html
+++ b/src/app/feature/user/component/user-dialog/user-dialog.component.html
@@ -13,11 +13,7 @@
     <div class="black-form-container">
 
       <div class="first-row-container">
-        <div class="image-container">
-          <div class="image">
-            <span>V</span>
-          </div>
-        </div>
+        
 
         <div class="black-form-container">
           <div class="black-first-form">
@@ -49,23 +45,26 @@
               </div>
             </div>
           </div>
+          <div class="black-first-form">
+            <div class="common-text-field-dialog-container">
+              <div class="common-text-field-dialog-container">
+                <span class="label-txt-field-sm">Phone</span>
+                <input class="input" pInputText formControlName="firstName"/>
+              </div>
+            </div>
+            <div class="common-text-field-dialog-container">
+              <div class="common-text-field-dialog-container">
+                <span class="label-txt-field-sm">Password</span>
+                <input class="input" pInputText formControlName="lastName"/>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
       <div class="black-first-form">
         <div class="common-text-field-dialog-container">
-          <div class="common-text-field-dialog-container">
-            <span class="label-txt-field-sm">User Type</span>
-            <p-dropdown appendTo="body"
-                        formControlName="type"
-                        class="field-dropdown"
-                        [options]="dummyUserType"
-                        optionLabel="typeName"
-                        [placeholder]="'Select User Type'"
-                        [filter]="true"
-                        filterBy="typeName"
-            ></p-dropdown>
-          </div>
+          
         </div>
         <div class="common-text-field-dialog-container">
           <div class="common-text-field-dialog-container">
@@ -80,69 +79,30 @@
                         filterBy="roleName"
             ></p-dropdown>
           </div>
-        </div>
-      </div>
-
-      <div class="black-first-form">
-        <div class="common-text-field-dialog-container">
           <div class="common-text-field-dialog-container">
-            <span class="label-txt-field-sm">Institution</span>
-            <p-dropdown appendTo="body"
-                        formControlName="institution"
-                        class="field-dropdown"
-                        [options]="institutions"
-                        optionLabel="institutionName"
-                        [placeholder]="'Select Institution'"
-                        [filter]="true"
-                        filterBy="institutionName"
-            ></p-dropdown>
-          </div>
-        </div>
-        <div class="common-text-field-dialog-container">
-          <div class="common-text-field-dialog-container">
-            <span class="label-txt-field-sm">Group</span>
-            <p-dropdown appendTo="body"
-                        formControlName="userGroup"
-                        class="field-dropdown"
-                        [options]="userGroups"
-                        optionLabel="groupName"
-                        [placeholder]="'Select Group'"
-                        [filter]="true"
-                        filterBy="groupName"
-            ></p-dropdown>
+            <div class="common-text-field-dialog-container">
+              <span class="label-txt-field-sm">Group</span>
+              <p-dropdown appendTo="body"
+                          formControlName="userGroup"
+                          class="field-dropdown"
+                          [options]="userGroups"
+                          optionLabel="groupName"
+                          [placeholder]="'Select Group'"
+                          [filter]="true"
+                          filterBy="groupName"
+              ></p-dropdown>
+            </div>
           </div>
         </div>
       </div>
 
       <div class="black-first-form">
-        <div class="common-text-field-dialog-container">
-          <div class="common-text-field-dialog-container">
-            <span class="label-txt-field-sm">Status</span>
-            <p-dropdown appendTo="body"
-                        formControlName="active"
-                        class="field-dropdown"
-                        [options]="dummyStatus"
-                        optionLabel="name"
-                        [placeholder]="'Select Status'"
-                        [filter]="true"
-                        filterBy="name"
-            ></p-dropdown>
-          </div>
-        </div>
-        <div class="common-text-field-dialog-container">
-          <div class="common-text-field-dialog-container">
-            <span class="label-txt-field-sm">Lock</span>
-            <p-dropdown appendTo="body"
-                        formControlName="notLocked"
-                        class="field-dropdown"
-                        [options]="dummyOption"
-                        optionLabel="name"
-                        [placeholder]="'Select Status'"
-                        [filter]="true"
-                        filterBy="name"
-            ></p-dropdown>
-          </div>
-        </div>
+        
+      </div>
+
+      <div class="black-first-form">
+       
+        
       </div>
     </div>
 
